# fractalos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
shaders/: mandelbulb.frag
src/: main.cpp
